# intervals-streamlit

./: 3.9.20  Dockerfile  README.md  Z_MEI_Beautiful_Soup.ipynb  archive_requirements.txt  digitalocean.app.yaml  intervals_streamlit.py  intervals_streamlit2-dev.py  intervals_streamlit2-dev2.py  intervals_streamlit2.py  intervals_streamlit2_dev_2.py  intervals_streamlit2_drb.py  intervals_streamlit3.py  intervals_streamlit4.py  pyproject.toml  requirements.txt  test.py
.devcontainer/: devcontainer.json
XML_processing 2/xml_convert/: convertXML2MEI.py  convert_all_XML.py
archive of pages/: 0_piece  1_notes.py  2_melodic.py
iframe_figures/: figure_0.html
