[tool.poetry]
name = "intervals-streamlit"
version = "0.1.0"
description = "streamlit app for crim intervals"
authors = ["Richard Freedman <rfreedma@haverford.edu>"]
license = "Creative Commons NC-SA"
readme = "README.md"


[tool.poetry.dependencies]
python = "3.10.13"
altair = "5.2.0"
certifi = "2020.12.5"
chardet = "4.0.0"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.26.0"
idna = "3.1"
ipython = ">=7.23.1, <8.0"
joblib = "1.0.1"
jsonschema = "3.2"
lxml = "5.1.0"
matplotlib = "3.5.3"
matplotlib-inline = "0.1.6"
more-itertools = "8.7.0"
numpy = ">=1.20.2, <2.0.0"
pandas = ">=2.2.0"
statsmodels = "0.14.1"
plotly = "5.18.0"
plotly-express = "0.4.1"
pyarrow = ">=15.0.0"
pyvis = "0.1.9"
python-dateutil = "2.8.2"
python-louvain = "0.16"
pytz = "2021.1"
rfc3986 = "1.4.0"
seaborn = "0.11.2"
six = "1.16.0"
sniffio = "1.2.0"
textdistance = "4.2.1"
streamlit = "1.31.1"
crim-intervals = { git = "https://github.com/HCDigitalScholarship/intervals.git", branch = "rich_dev_24" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
