[tool.poetry]
name = "intervals-streamlit"
version = "0.1.0"
description = "streamlit app for crim intervals"
authors = ["Richard Freedman <rfreedma@haverford.edu>"]
license = "Creative Commons NC-SA"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10"
streamlit = ">=1.38.0,<1.39.0 || >1.39.0"
altair = "5.2.0"
certifi = "2020.12.5"
chardet = "4.0.0"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.26.0"
idna = "3.1"
joblib = "1.0.1"
jsonschema = "3.2"
lxml = "5.1.0"
more-itertools = "8.7.0"
numpy = ">=1.20.2, <2.0.0"
pandas = ">=2.2.0"
statsmodels = "0.14.1"
plotly-express = "0.4.1"
pyarrow = "17.0.0"  # Use this version which is known to work well
python-dateutil = "2.8.2"
python-louvain = "0.16"
pytz = "2021.1"
rfc3986 = "1.4.0"
six = "1.16.0"
sniffio = "1.2.0"
textdistance = "4.2.1"
crim_intervals = {git = "https://github.com/HCDigitalScholarship/intervals.git", branch = "intervals_4_streamlit_dev", extras = ["no-verovio"]}


[
tool.poetry.extras
]
no-verovio = ["crim_intervals"]  # Add this section


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
