[tool.poetry]
name = "intervals-streamlit"
version = "1.0.0"
description = "Streamlit application for interval analysis"
authors = ["Your Name <youremail@example.com>"]


[tool.poetry.dependencies]
python = "^3.10"
altair = "==5.2.0"
anyio = "==4.4.0"
appnope = "==0.1.4"
attrs = "==24.2.0"
backcall = "==0.2.0"
certifi = "==2020.12.5"
chardet = "==4.0.0"
charset-normalizer = "==3.3.2"
colorama = "==0.4.6"
contourpy = "==1.3.0"
crim-intervals = { git = "https://github.com/HCDigitalScholarship/intervals.git", branch = "intervals_4_streamlit" }
cycler = "==0.12.1"
decorator = "==5.1.1"
exceptiongroup = "==1.2.2"
fonttools = "==4.53.1"
h11 = "==0.14.0"
httpcore = "==1.0.2"
httpx = "==0.26.0"
idna = "==3.1"
importlib-resources = "==6.4.4"
ipython = "==7.34.0"
jedi = "==0.19.1"
jinja2 = "==3.1.4"
joblib = "==1.0.1"
jsonpickle = "==3.2.2"
jsonschema-specifications = "==2023.12.1"
jsonschema = "==4.23.0"
kiwisolver = "==1.4.5"
lxml = "==5.1.0"
markupsafe = "==2.1.5"
matplotlib-inline = "==0.1.7"
matplotlib = "==3.9.2"
more-itertools = "==8.7.0"
music21 = "==8.3.0"
networkx = "==3.2.1"
numpy = "==1.26.4"
packaging = "==24.1"
pandas = "==2.2.2"
parso = "==0.8.4"
patsy = "==0.5.6"
pexpect = "==4.9.0"
pickleshare = "==0.7.5"
pillow = "==10.4.0"
prompt-toolkit = "==3.0.47"
ptyprocess = "==0.7.0"
pyarrow = "==17.0.0"
pygments = "==2.18.0"
pyparsing = "==3.1.4"
python-dateutil = "==2.8.2"
pytz = "==2021.1"
referencing = "==0.35.1"
requests = "==2.31.0"
rfc3986 = "==1.4.0"
rpds-py = "==0.20.0"
seaborn = "==0.13.0"
scipy = "==1.13.1"
setuptools = "==74.0.0"
six = "==1.16.0"
sniffio = "==1.2.0"
statsmodels = "==0.14.1"
streamlit = "==1.42.0"
tenacity = "==9.0.0"
textdistance = "==4.2.1"
toolz = "==0.12.1"
traitlets = "==5.14.3"
typing-extensions = "==4.12.2"
tzdata = "==2024.1"
urllib3 = "==2.2.2"
wcwidth = "==0.2.13"
webcolors = "==1.11.1"
xlsxwriter = "==3.0.2"
zipp = "==3.20.1"
plotly = "==5.13.1"
plotly-express = "==0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"